# iz1

./: ..travis.yml.swp  .gitignore  CMakeLists.txt  CPPLINT.cfg  freemem.c  freemem.h  main.c  process.c  travis.yml
include/: figures.h  process.h
src/: freemem.c  main.c  process.c
tests/: tests.cpp
